--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,48 @@
 <resources>
     <string name="app_name">TpFinalTUSI</string>
+    <string name="terminos_condicones">Términos y Condiciones de Uso de la Plataforma EcoSostenible\n
+    \n
+    Estos Términos y Condiciones de Uso ("Términos") rigen el uso de la plataforma móvil integral "EcoSostenible: Cuidando Nuestro Entorno" ("Plataforma") proporcionada por [Tu Nombre de Empresa o Desarrollador] ("Nosotros" o "Nuestra"). Al utilizar la Plataforma, aceptas estos Términos en su totalidad. Si no estás de acuerdo con estos Términos, por favor, no utilices la Plataforma.\n
+    \n
+    1. Uso de la Plataforma\n
+    \n
+    1.1. La Plataforma tiene como objetivo fomentar la participación ciudadana y la responsabilidad ambiental, permitiendo a los usuarios señalar incidentes ambientales, ubicar puntos de reciclaje y centros de acopio, y participar en prácticas sostenibles.\n
+    \n
+    1.2. Te comprometes a utilizar la Plataforma de manera ética y responsable, respetando los derechos de otros usuarios y cumpliendo con todas las leyes y regulaciones aplicables.\n
+    \n
+    2. Privacidad y Datos del Usuario\n
+    \n
+    2.1. Al utilizar la Plataforma, aceptas nuestra Política de Privacidad, que describe cómo recopilamos, utilizamos y compartimos tus datos personales. Debes revisar nuestra Política de Privacidad para comprender cómo manejamos tus datos.\n
+    \n
+    3. Propiedad Intelectual\n
+    \n
+    3.1. Nuestra Plataforma, incluyendo su diseño, contenido y logotipos, está protegida por derechos de propiedad intelectual. No tienes permiso para copiar, modificar o distribuir ningún contenido de la Plataforma sin nuestro consentimiento previo por escrito.\n
+    \n
+    4. Responsabilidad\n
+    \n
+    4.1. No nos hacemos responsables por ningún daño, pérdida o perjuicio que puedas sufrir como resultado del uso de la Plataforma.\n
+    \n
+    5. Colaboraciones y Contenido de Terceros\n
+    \n
+    5.1. Podemos colaborar con organizaciones ambientales, autoridades locales y otros terceros. No somos responsables de las acciones o contenido de terceros.\n
+    \n
+    6. Actualizaciones y Cambios\n
+    \n
+    6.1. Podemos actualizar o cambiar estos Términos en cualquier momento. Te notificaremos sobre cambios importantes. Si continúas utilizando la Plataforma después de la modificación de los Términos, se considerará que aceptas los cambios.\n
+    \n
+    7. Terminación\n
+    \n
+    7.1. Nos reservamos el derecho de terminar tu acceso o uso de la Plataforma en cualquier momento, por cualquier motivo, sin previo aviso.\n
+    \n
+    8. Ley Aplicable\n
+    \n
+    8.1. Estos Términos se rigen por las leyes de [País o Jurisdicción], y cualquier disputa relacionada con estos Términos estará sujeta a la jurisdicción exclusiva de los tribunales de [Ciudad o Jurisdicción].\n
+    \n
+    9. Contacto\n
+    \n
+    9.1. Si tienes preguntas o comentarios sobre estos Términos, contáctanos en lautaroa.lr@gmail.com.\n
+    \n
+    Por favor, lee estos Términos y Condiciones cuidadosamente antes de aceptarlos y utilizar la Plataforma. Si tienes alguna pregunta o inquietud sobre estos Términos, te recomendamos buscar asesoramiento legal antes de aceptarlos.
+</string>
+
 </resources>
