Cambio de icono y google maps por OpenStreetMap

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TpFinalTUSI</string>
+    <string name="app_name">EcoSostenible</string>
     <string name="terminos_condicones">Términos y Condiciones de Uso de la Plataforma EcoSostenible\n
     \n
     Estos Términos y Condiciones de Uso ("Términos") rigen el uso de la plataforma móvil integral "EcoSostenible: Cuidando Nuestro Entorno" ("Plataforma") proporcionada por [Tu Nombre de Empresa o Desarrollador] ("Nosotros" o "Nuestra"). Al utilizar la Plataforma, aceptas estos Términos en su totalidad. Si no estás de acuerdo con estos Términos, por favor, no utilices la Plataforma.\n
